--- a/whatsapp-api/docker-compose.yml
+++ b/whatsapp-api/docker-compose.yml
@@ -24,3 +24,4 @@ services:
       # - RECOVER_SESSIONS=TRUE # OPTIONAL, SHOULD WE RECOVER THE SESSION IN CASE OF PAGE FAILURES
     volumes:
       - ./sessions:/usr/src/app/sessions # Mount the local ./sessions/ folder to the container's /usr/src/app/sessions folder
+      - .:/usr/src/app # Mount the local ./ folder to the container's /usr/src/app folder
